Added argument line in compiler plugin and lombok for annotation processing